--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 /*
-Theme Name: Wordpress + Bootstrap 5 + Webpack Starter
+Theme Name: ARP x Rayn
 Theme URI: https://wordpress.org/themes/twentytwenty/
-Author: DCode Studios
-Author URI: https://dcodestudios.com/
-Description: Wordpress starter theme using Bootstrap Native 5 and Webpack.
+Author: Rayn
+Author URI: https://www.rayn.group/
+Description: Rayn envisions building a new future by harnessing the potential of technology through our ability to strategize and our capacity to implement.
 Version: 1.0
 Requires at least: 5.0
 Tested up to: 5.4
 Requires PHP: 7.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: dcodestudios
+Text Domain: twentytwenty
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 */
